# selene

./: CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  README.md  pyproject.toml  renovate.json
mongo_python/: branch.py  build.py  log_file.py  mongo_create.py  mongo_update.py  output_file.py  selene_server.py  server.py  test.py
test/data/: TESTS-project.xml  TESTS-project.xml.json  gtest_xUnit.xml  gtest_xUnit.xml.json  output.xml  output.xml.json  pytest_xUnit.xml  pytest_xUnit.xml.json
test/unit/: test_branch.py  test_build.py  test_log_file.py  test_output_file.py  test_selene_create.py  test_selene_server.py  test_server.py  test_test.py
